Add security hub summary API
  include with_dangerous_artifact, with_dangerous_cve option
